--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     href="https://qtrypzzcjebvfcihiynt.supabase.co/storage/v1/object/public/base44-prod/public/697e84faecd47b83bcfdffc5/841ecaab1_Gemini_Generated_Image_j6y5slj6y5slj6y5.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="manifest" href="/manifest.json" />
-  <title>Base44 APP</title>
+  <title>Gorilla Tag Archive </title>
 </head>
 
 <body>
